# gdl-scene-segment

./: .gitignore  Dockerfile  README.md  compute_operators.py  get_compile_vcglib.sh  preprocess.py  pyproject.toml  requirements.txt  scannet_dataset.py  scannet_main.py  utils.py  visualization.py  visualize_labels_on_mesh.sh  visualize_metrics.py
gdlSceneSegment/: pyproject.toml  scannet_dataset.py  scannet_main.py  visualize_labels_on_mesh.sh  visualize_metrics.py
gdl_scene_segment/: main.py  main_hierarchy.py  main_hierarchy_geo.py  main_hierarchy_test_geo.py
gdl_scene_segment/config/: config.py  settings.toml  settings_hierarchy.toml
gdl_scene_segment/datasets/: compute_operators.py  compute_operators_hierarchy.py  generate_stats.py  preprocess_meshes.py  scannet_dataset.py  scannet_dataset_pyg.py  scannet_hierarchy_dataset.py  scannet_hierarchy_dataset_geo.py  scannet_hierarchy_dataset_test_geo.py  simplify_meshes.py
gdl_scene_segment/datasets/splits/: scannetv2_train_1e5.txt  scannetv2_train_2e5.txt  scannetv2_train_3e5.txt  scannetv2_train_4e5.txt  scannetv2_train_5e5.txt
gdl_scene_segment/model/: model.py  model_test_geo.py  utils.py
gdl_scene_segment/visualization/: assemble_metrics.py  misc.py  plot_misc.py  util_3d.py  views.json  views_obs.json  visualize_labels_on_mesh.py  visualize_labels_on_meshes.sh  visualize_metrics.py  visualize_operators.py  visualize_scenes.py
