[tool.poetry]
name = "gdl_scene_segment"
version = "0.1.0"
description = ""
authors = ["Chih-Yu Chen <chihyuchentw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
polyscope = "^1.3.4"
potpourri3d = "^1.0.0"
robust-laplacian = "^0.2.7"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
plyfile = "^1.0.2"
matplotlib = "^3.8.2"
open3d = "^0.17.0"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
addict = "^2.4.0"
pandas = "^2.1.3"
torcheval = "^0.0.7"
imageio = "^2.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
