[tool.poetry]
name = "gdl_scene_segment"
version = "0.1.0"
description = ""
authors = ["Chih-Yu Chen <chihyuchentw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
polyscope = "^1.3.4"
potpourri3d = "^1.0.0"
robust-laplacian = "^0.2.7"
plyfile = "^1.0.2"
matplotlib = "^3.8.2"
open3d = "^0.17.0"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
addict = "^2.4.0"
pandas = "^2.1.3"
imageio = "^2.33.0"
torch = {version = "2.0.1", source = "torch"}
torchvision = {version = "0.15.2", source = "torch"}
torchaudio = {version = "2.0.2", source = "torch"}
torcheval = "^0.0.7"
torch-geometric = "^2.4.0"
torchsparse = {version = "^2.1.0+torch20cu118", source = "torchsparse"}
torch-scatter = {version = "^2.1.2+pt20cu118", source = "torch-scatter"}
dynaconf = "^3.2.4"
wandb = "^0.16.4"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[[tool.poetry.source]]
name = "torchsparse"
url = "http://24.199.104.228/simple"
priority = "explicit"


[[tool.poetry.source]]
name = "torch-scatter"
url = "https://data.pyg.org/whl/torch-2.0.0+cu118.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
